--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SKom2/kanban-desk.git"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "homepage": "https://github.com/SKom2/kanban-desk",
+    "gh-pages": "^5.0.0"
   }
 }
